[tool.poetry]
name = "py_ao3"
version = "0.1.0"
description = "A simple CLI to get reports of your AO3 works"
license = "GPL-3.0-only"
authors = ["YisusChrist <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/YisusChrist/py_ao3"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
chardet = "^5.2.0"
matplotlib = "^3.9.1"
rich = "^13.7.1"
textual = "^0.74.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
py_ao3 = 'py_ao3.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
